docs: fix skills spacing

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -171,7 +171,7 @@ pre {
 }
 
 pre {
-  margin: 14px 0 0;
+  margin: 14px 0 22px;
   overflow-x: auto;
   font-size: 14px;
   line-height: 1.5;
